--- a/Negotiation3/Base.lproj/Main_iPhone.storyboard
+++ b/Negotiation3/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B17" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rS3-R9-Ivy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -925,6 +925,7 @@
                         <segue destination="h1x-Km-8n1" kind="push" identifier="scorecard_profile_comparison" id="QeZ-ef-Q0B"/>
                         <segue destination="PQ4-K1-go6" kind="push" identifier="scorecard_lessons_learned" id="y17-a4-zRv"/>
                         <segue destination="fzX-tZ-Zhe" kind="push" identifier="scorecard_summary" id="9bQ-Qc-b8u"/>
+                        <segue destination="HCL-za-HeV" kind="push" identifier="notes" id="oFu-12-oe6"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l1h-cl-8ev" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1910,11 +1911,12 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="oA1-ch-634"/>
-        <segue reference="UvR-e4-cJ3"/>
         <segue reference="Q57-xl-Lgr"/>
+        <segue reference="72D-xW-IWS"/>
+        <segue reference="oA1-ch-634"/>
         <segue reference="XrA-bw-hNd"/>
         <segue reference="9hR-Rc-zEg"/>
+        <segue reference="oFu-12-oe6"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" cyan="0.0" magenta="0.44" yellow="0.88" black="0.0" alpha="1" colorSpace="custom" customColorSpace="genericCMYKColorSpace"/>
 </document>
