--- a/Negotiation3/Base.lproj/Main_iPhone.storyboard
+++ b/Negotiation3/Base.lproj/Main_iPhone.storyboard
@@ -167,14 +167,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="My Best Practices" id="CGA-Db-MMq">
-                        <barButtonItem key="backBarButtonItem" title="Home" id="b29-UN-1T7">
+                        <barButtonItem key="leftBarButtonItem" title="Home" style="plain" id="c4p-g6-iu6">
                             <connections>
-                                <segue destination="pGg-6v-bdr" kind="push" id="MdK-0d-a4k"/>
+                                <segue destination="pGg-6v-bdr" kind="push" id="RY0-vk-xlv"/>
                             </connections>
                         </barButtonItem>
-                        <connections>
-                            <outlet property="leftBarButtonItem" destination="b29-UN-1T7" id="ULD-Fo-1mC"/>
-                        </connections>
                     </navigationItem>
                     <connections>
                         <segue destination="CIG-ox-MP6" kind="push" identifier="best_practices_www" id="2I6-NU-qqr"/>
@@ -1933,14 +1930,14 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="RxB-wf-QIq"/>
-        <segue reference="XrA-bw-hNd"/>
-        <segue reference="dcM-bi-1Rf"/>
-        <segue reference="oA1-ch-634"/>
-        <segue reference="Q57-xl-Lgr"/>
-        <segue reference="CDr-fM-Uml"/>
         <segue reference="9hR-Rc-zEg"/>
-        <segue reference="oFu-12-oe6"/>
+        <segue reference="oA1-ch-634"/>
+        <segue reference="RY0-vk-xlv"/>
+        <segue reference="CDr-fM-Uml"/>
+        <segue reference="GHC-Fh-jPE"/>
+        <segue reference="Q57-xl-Lgr"/>
+        <segue reference="XrA-bw-hNd"/>
+        <segue reference="JhG-7d-thQ"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" cyan="0.0" magenta="0.44" yellow="0.88" black="0.0" alpha="1" colorSpace="custom" customColorSpace="genericCMYKColorSpace"/>
 </document>
