--- a/Negotiation3/Base.lproj/Main_iPhone.storyboard
+++ b/Negotiation3/Base.lproj/Main_iPhone.storyboard
@@ -1159,6 +1159,7 @@
                         <segue destination="JEJ-MM-Sbq" kind="push" identifier="about_negotiation_resources" id="JhG-7d-thQ"/>
                         <segue destination="pDf-tE-goB" kind="push" identifier="about_mw" id="tP3-F4-eX5"/>
                         <segue destination="V8Z-Y1-GMa" kind="push" identifier="about_negotiation_profiles" id="wKE-uQ-7bj"/>
+                        <segue destination="hLB-HA-YkV" kind="push" identifier="about_negotiation_app" id="g9q-Ve-xWC"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mi0-Dc-ke2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1605,6 +1606,34 @@
             </objects>
             <point key="canvasLocation" x="1748" y="2068"/>
         </scene>
+        <!--About Negotiation 360°-->
+        <scene sceneID="SQj-gi-rKu">
+            <objects>
+                <viewController id="hLB-HA-YkV" customClass="NEGAboutAppController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bsh-1i-W5i"/>
+                        <viewControllerLayoutGuide type="bottom" id="9UQ-Wi-50D"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xUY-Ty-rvi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TnW-JE-WwJ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="About Negotiation 360°" id="oYv-bG-FZ8"/>
+                    <connections>
+                        <outlet property="webView" destination="TnW-JE-WwJ" id="qg3-Ve-7Fa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TQJ-Sa-R6q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2130" y="2068"/>
+        </scene>
         <!--Bargaining Styles-->
         <scene sceneID="j7e-ox-iKi">
             <objects>
@@ -1949,14 +1978,14 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="RxB-wf-QIq"/>
         <segue reference="oA1-ch-634"/>
-        <segue reference="Q57-xl-Lgr"/>
-        <segue reference="dcM-bi-1Rf"/>
-        <segue reference="CDr-fM-Uml"/>
+        <segue reference="RxB-wf-QIq"/>
         <segue reference="XrA-bw-hNd"/>
-        <segue reference="9hR-Rc-zEg"/>
+        <segue reference="Q57-xl-Lgr"/>
+        <segue reference="CDr-fM-Uml"/>
+        <segue reference="JhG-7d-thQ"/>
         <segue reference="GHC-Fh-jPE"/>
+        <segue reference="9hR-Rc-zEg"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.90588235294117647" green="0.52549019607843139" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
