Changed font on negotiation type list selection

--- a/Negotiation3/Base.lproj/Main_iPhone.storyboard
+++ b/Negotiation3/Base.lproj/Main_iPhone.storyboard
@@ -2000,8 +2000,8 @@
     <inferredMetricsTieBreakers>
         <segue reference="oFu-12-oe6"/>
         <segue reference="TxM-el-1ZU"/>
-        <segue reference="XrA-bw-hNd"/>
-        <segue reference="RxB-wf-QIq"/>
+        <segue reference="rig-AL-udf"/>
+        <segue reference="72D-xW-IWS"/>
         <segue reference="CDr-fM-Uml"/>
         <segue reference="oA1-ch-634"/>
         <segue reference="JhG-7d-thQ"/>
